[package]
name = "simple-bits"
version = "1.0.0"
edition = "2021"
authors = ["Stephan van Schaik <stephan@synkhronix.com>"]
license = "MIT"
description = "A simple Rust trait to extract and replace bits in integer types."
homepage = "https://codentium.com"
repository = "https://github.com/StephanvanSchaik/simple-bits"
